fix spacing for homepage

--- a/client/src/pages/homepage/homepage.styles.scss
+++ b/client/src/pages/homepage/homepage.styles.scss
@@ -1,6 +1,11 @@
+@import '../../sass/mixins';
+
 .homepage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // padding: 20px 40px;
+
+  @include md {
+    margin-top: 25px;
+  }
 }
